corrected stylesheet reference.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylsheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Stephen Thompson::That Portfolio Though</title>
 </head>
 <body>
-    <h1 class=".header">About Me</h1>
+    <h1 class="header">About Me</h1>
     <p>Hello, my name is Stephen, I'm a father of two. My son Angelo is 12 and my daughter Angele is 7.
         I love spending quality time with my children.  I like anything Info Tech, I've been working in Info Tech since I was
         in high school.  I changed my diet to Vegan 10 months ago.  I like to hit balls at Top Golf, I like hitting balls in the 
