--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <title>Stephen Thompson::That Portfolio Though</title>
 </head>
 <body>
-   <header>Menus</header>
-<div class="clearfix">
-<div class="content"></div>
-<div class="content"><p>Hello, my name is Stephen, I'm a father of two. My son Angelo is 12 and my daughter Angele is 7.
-        I love spending quality time with my children.  I like anything Info Tech, I've been working in Info Tech since I was
-        in high school.  I changed my diet to Vegan 10 months ago.  I like to hit balls at Top Golf, I like hitting balls in the 
-        batting cage too.  I look forward to upgrading and refreshing my web coding skills!</p></div>
-<div class="content"></div>
+    <div class="pro_contain">
+    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options">About  |  Portfolio  |  Contact</div></header>
+        
+    <div class="mainsection">
+    <header class="about_header">About Me</header>
+    <div class="clearfix">
+    <div class="content">
+        <img src="./assets/images/Stephen_Thompson.jpg" width="200" height="200" class="profile_pic">
+        <p class="text">
+            Hello, my name is Stephen, I'm a father of two. My son Angelo is 12 and my daughter Angele is 7. 
+            I love spending quality time with my children.  I like anything Info Tech, I've been working in Info Tech since I was in high school.  
+            I changed my diet to Vegan 10 months ago.  I like to hit balls at Top Golf, I like hitting balls in the batting cage too.  I look 
+            forward to upgrading and refreshing my web coding skills!
+        </p>
+    </div>
+    </div>
 </div>
- <footer>Footer</footer>
+
+    <footer class="footer"></footer>
+</div>
+
 </body>
 </html>
