--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Stephen Thompson::That Portfolio Though</title>
 </head>
 <body>
+    <head></head>
     <div class="pro_contain">
-    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options">About  |  Portfolio  |  Contact</div></header>
+    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options">About  |  Portfolio  |  Contact</div>  </header>
         
     <div class="mainsection">
     <header class="about_header">About Me</header>
