--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <head></head>
     <div class="pro_contain">
-    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options">About  |  Portfolio  |  Contact</div>  </header>
+    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options"><a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></div>  </header>
         
     <div class="mainsection">
     <header class="about_header">About Me</header>
