--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,15 @@
     <div class="clearfix">
     <div class="content">
             <form>
-                <label for="name">Name:</label>
+                <label for="name" class="labels">Name</label>
                 <input type="text" id="name" name="formname" placeholder="Enter your name">
             
-                <label for="email">email:</label>
+                <label for="email" class="labels">email</label>
                 <input type="email" id="email" name="email" placeholder="Your email">
             
-                <label for="message">Message</label>
+                <label for="message" class="labels">Message</label>
                 <input type="text" id="message" name="message" placeholder="Type your message...">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" class="submit">
               </form>
     </div>
     </div>
