added header div container 960px;

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Stephen Thompson::That Portfolio Though</title>
 </head>
 <body>
-    <header class="menu"><div class="name">Stephen Thompson</div><div class="menu_options"><a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></div>  </header>
+    <header class="menu"><div class="top_contain"><div class="name">Stephen Thompson</div><div class="menu_options"><a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></div> </div> </header>
 
     <div class="pro_contain">
           
